--- a/services/rabbitmq/rabbitmq-pv.yaml
+++ b/services/rabbitmq/rabbitmq-pv.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: rabbitmq-pv
   namespace: rabbitmq
+  name: rabbitmq-pv
 spec:
-  capacity:
-    storage: 1Gi
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: "fiap-sa-storage"
+  capacity:
+    storage: 1Gi
+  hostPath:
+    path: /data/rabbitmq
